# turbo-spoon

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  build.py  generateSolution.bat
resources/shaders/: rect.frags  rect.vs
src/: Source.cpp  main.cpp
src/common/: GLFWCommon.h  Singleton.h
src/debug/: DebugHandler.h
src/graphics/: GLEWGraphicsHandler.h  IGraphicsHandler.h  ResourceManager.h  Shader.h  Sprite.h  Text.cpp  Text.h  Texture.h  Window.h
src/imgui/: imgui.h
src/input/: GLFWKeyHandler.cpp  GLFWKeyHandler.h  IKeyHandler.h
src/window/: GLFWWindowHandler.cpp  GLFWWindowHandler.h  IWindowsHandler.h
